--- a/SellreMarket/src/main/resources/static/css/detail/detailPage.css
+++ b/SellreMarket/src/main/resources/static/css/detail/detailPage.css
@@ -20,12 +20,15 @@
 
 .css-5v50l3 {
     width: 430px;
-    height: 552px;
-    background:
-    url(http://localhost:8080/SellreMarket/image/introduce1.jpeg);
-    -webkit-background-size: cover,contain;
+    height: auto;
     background-size: cover,contain;
-    background-color: #f5f5f5;
+    background-color: #800080;
+}
+
+.product-image {
+    max-width: 100%; /* 이미지의 최대 너비를 부모 요소의 너비에 맞춥니다. */
+    height: auto; /* 이미지의 높이를 자동으로 조정하여 비율을 유지합니다. */
+    margin-bottom: 20px;
 }
 
 .css-1ua1wyk {
