--- a/SellreMarket/src/main/resources/static/css/adminQuest.css
+++ b/SellreMarket/src/main/resources/static/css/adminQuest.css
@@ -70,7 +70,7 @@ table {
 
 table th, table td {
   padding: 15px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ccc;
   white-space: nowrap;
   overflow: hidden;
