--- a/SellreMarket/src/main/resources/static/css/adminOrder.css
+++ b/SellreMarket/src/main/resources/static/css/adminOrder.css
@@ -70,7 +70,7 @@ table {
 
 table th, table td {
   padding: 15px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ccc;
   white-space: nowrap;
   overflow: hidden;
@@ -104,7 +104,8 @@ table tr:hover {
        margin-bottom: 150px;
    } 
    
-#paging button {
+#paging button,
+#paging .button {
     background-color: #f2f2f2;
     border: none;
     color: #333;
@@ -114,11 +115,17 @@ table tr:hover {
     border-radius: 4px;
 }
 
-#paging button:hover {
+#paging button:hover,
+#paging .button:hover {
     background-color: #f9f9f9;
 }
 
-#paging button:disabled {
+#paging button:disabled,
+#paging .button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
+}
+
+.button {
+	text-decoration: none;
 }  
