--- a/SellreMarket/src/main/resources/static/css/adminOrderDetail.css
+++ b/SellreMarket/src/main/resources/static/css/adminOrderDetail.css
@@ -49,6 +49,7 @@ form {
       display: block;
       font-weight: bold;
       margin-bottom: 5px;
+      margin-top: 20px;
     }
     
      .orderBtn {
@@ -58,12 +59,10 @@ form {
       border: none;
       border-radius: 3px;
       font-size: 16px;
+      width: 100%;
       cursor: pointer;
-      width: 80%;
-  	  max-width: 700px; 
       margin-top: 30px;
       margin-bottom: 200px;
-      margin-left : 10px;
     }
     
     .orderBtn:hover {
