--- a/SellreMarket/src/main/resources/static/css/adminEventRegister.css
+++ b/SellreMarket/src/main/resources/static/css/adminEventRegister.css
@@ -70,7 +70,8 @@ form {
     }
     
   	input[type="file"],
-    input[type="text"] {
+    input[type="text"],
+    select {
       width: 100%;
       padding: 8px;
       border-radius: 3px;
