--- a/SellreMarket/src/main/resources/static/css/adminCategory.css
+++ b/SellreMarket/src/main/resources/static/css/adminCategory.css
@@ -28,18 +28,21 @@ body {
 	font-size: 27px; /* 제목의 글꼴 크기 조정 */
 	font-weight: 700; /* 제목의 글꼴 굵기 조정 */
 	color: #333333; /* 제목의 글꼴 색상 조정 */
-	margin-top: 100px; /* 제목의 상단 여백 조정 */
+	margin-top: 0px; /* 제목의 상단 여백 조정 */
 	padding-left: 20px; /* 제목의 왼쪽 여백 조정 */
 	border-left: 2px solid #333333; /* 왼쪽 테두리 설정 */
 	margin-bottom: 28px;
 }
 	
 .btnGroup {
-    text-align: right;
+	display: flex;
+	justify-content: space-between;
+    /*text-align: right;*/
     width: 80%;
     margin-right: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 } 
+
 
 .registerBtn {
   background-color: #f2f2f2;
@@ -51,13 +54,25 @@ body {
   margin-top: 20px;
 }
 
+.searchBtn {
+	background-color: #f2f2f2;
+  	color: #6F6F67;
+  	padding: 10px 20px;
+  	border: none;
+  	border-radius: 5px;
+  	cursor: pointer;
+  	margin-top: 20px;
+  	margin-right: 10px;;
+}
+
+
 .tableContainer {
   margin: 0 auto;
   width: 80%;
 }
 
 
-.registerBtn:hover {
+.registerBtn:hover, .searchBtn:hover {
   background-color: #E5E5D1;
   color : black;
 }
@@ -128,4 +143,18 @@ table tr:hover {
 
 .button {
 	text-decoration: none;
-}   
+}
+
+
+#search {
+  padding: 6px 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 10px;
+  border: 1px solid black;
+}
+.query {
+	 padding: 5px;
+	 border: 1px solid black;
+	 border-radius: 4px;
+}
