--- a/SellreMarket/src/main/resources/static/css/adminOrder.css
+++ b/SellreMarket/src/main/resources/static/css/adminOrder.css
@@ -35,12 +35,13 @@ body {
 }
 	
 .btnGroup {
-    text-align: right;
+	display: flex;
+	justify-content: space-between;
+    /*text-align: right;*/
     width: 80%;
     margin-right: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 } 
-
 .registerBtn {
   background-color: #f2f2f2;
   color: #6F6F67;
@@ -51,13 +52,24 @@ body {
   margin-top: 20px;
 }
 
+.searchBtn {
+	background-color: #f2f2f2;
+  	color: #6F6F67;
+  	padding: 10px 20px;
+  	border: none;
+  	border-radius: 5px;
+  	cursor: pointer;
+  	margin-top: 20px;
+  	margin-right: 10px;;
+}
+
 .tableContainer {
   margin: 0 auto;
   width: 80%;
 }
 
 
-.registerBtn:hover {
+.registerBtn:hover, .searchBtn:hover {
   background-color: #E5E5D1;
   color : black;
 }
@@ -129,3 +141,11 @@ table tr:hover {
 .button {
 	text-decoration: none;
 }  
+
+#search {
+  padding: 6px 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 10px;
+  border: 1px solid black;
+}
