--- a/SellreMarket/src/main/resources/static/css/admin_product.css
+++ b/SellreMarket/src/main/resources/static/css/admin_product.css
@@ -33,10 +33,12 @@ body {
 }
 	
 .btnGroup {
-    text-align: right;
+	display: flex;
+	justify-content: space-between;
+    /*text-align: right;*/
     width: 80%;
     margin-right: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 } 
 
 .registerBtn {
@@ -49,13 +51,24 @@ body {
   margin-top: 20px;
 }
 
+.searchBtn {
+	background-color: #f2f2f2;
+  	color: #6F6F67;
+  	padding: 10px 20px;
+  	border: none;
+  	border-radius: 5px;
+  	cursor: pointer;
+  	margin-top: 20px;
+  	margin-right: 10px;;
+}
+
 .tableContainer {
   margin: 0 auto;
   width: 80%;
 }
 
 
-.registerBtn:hover {
+.registerBtn:hover, .searchBtn:hover {
   background-color: #E5E5D1;
   color : black;
 }
@@ -68,7 +81,7 @@ table {
 
 table th, table td {
   padding: 15px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ccc;
   white-space: nowrap;
   overflow: hidden;
@@ -102,7 +115,8 @@ table tr:hover {
        margin-bottom: 150px;
    } 
    
-#paging button {
+#paging button,
+#paging .button {
     background-color: #f2f2f2;
     border: none;
     color: #333;
@@ -112,13 +126,19 @@ table tr:hover {
     border-radius: 4px;
 }
 
-#paging button:hover {
+#paging button:hover,
+#paging .button:hover {
     background-color: #f9f9f9;
 }
 
-#paging button:disabled {
+#paging button:disabled,
+#paging .button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
+}
+
+.button {
+	text-decoration: none;
 }  
 
 .alarm {
@@ -127,3 +147,10 @@ table tr:hover {
 	margin-left : 20px;
 }
 
+#search {
+  padding: 6px 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 10px;
+  border: 1px solid black;
+}
