--- a/SellreMarket/src/main/resources/static/css/purchaseProduct.css
+++ b/SellreMarket/src/main/resources/static/css/purchaseProduct.css
@@ -30,7 +30,12 @@
 }
 
 
-
+.css-17jyui4 {
+    width: 60px;
+    height: 78px;
+    cursor: pointer;
+    background-color: rgb(245, 245, 245);
+}
 
 .css-1uom1od {
     width: 1050px;
@@ -93,6 +98,8 @@
 .item-info {
     display: flex;
     flex-direction: column;
+    margin-left: 30px;
+    margin-top: 7px;
 }
 
 .item-name {
