--- a/SellreMarket/src/main/resources/static/css/adminQuest.css
+++ b/SellreMarket/src/main/resources/static/css/adminQuest.css
@@ -118,7 +118,8 @@ table tr:hover {
        margin-bottom: 150px;
    } 
    
-#paging button {
+#paging button,
+#paging .button {
     background-color: #f2f2f2;
     border: none;
     color: #333;
@@ -128,14 +129,20 @@ table tr:hover {
     border-radius: 4px;
 }
 
-#paging button:hover {
+#paging button:hover,
+#paging .button:hover {
     background-color: #f9f9f9;
 }
 
-#paging button:disabled {
+#paging button:disabled,
+#paging .button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
-} 
+}
+
+.button {
+	text-decoration: none;
+}  
 
 #search {
   padding: 6px 20px;
